// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useDebugger circular references 1`] = `
Array [
  Object {
    "__": "console.info",
    "arguments": Array [
      "%cDebugComponent%c > Initial render",
      "color: green; font-weight: bold",
      "font-weight: bold",
    ],
  },
  Object {
    "__": "console.group",
    "arguments": Array [
      "%cDebugComponent%c > Re-render with changes",
      "color: green; font-weight: bold",
      "font-weight: bold",
    ],
  },
  Object {
    "__": "console.info",
    "arguments": Array [
      "%c \\"foo\\" %c but not visually changed
%c  - %s 
%c  + %s ",
      "background: white; color: black; line-height: 18px; margin-top: 2px",
      "background: none; line-height: 18px; color: #ababab; font-size: .85em",
      "background: #ffdce0; line-height: 18px; color: black",
      "{\\"bar\\":0}",
      "background: #cdffd8; line-height: 18px; color: black; margin-bottom: 2px",
      "{\\"bar\\":0}",
    ],
  },
  Object {
    "__": "console.groupEnd",
    "arguments": Array [],
  },
]
`;

exports[`useDebugger initial render 1`] = `
Array [
  Object {
    "__": "console.info",
    "arguments": Array [
      "%cDebugComponent%c > Initial render",
      "color: green; font-weight: bold",
      "font-weight: bold",
    ],
  },
  Object {
    "__": "console.warn",
    "arguments": Array [
      "%cDebugComponent%c > Re-render without changes",
      "color: green; font-weight: bold",
      "font-weight: bold",
    ],
  },
]
`;

exports[`useDebugger normal re-render 1`] = `
Array [
  Object {
    "__": "console.info",
    "arguments": Array [
      "%cDebugComponent%c > Initial render",
      "color: green; font-weight: bold",
      "font-weight: bold",
    ],
  },
  Object {
    "__": "console.group",
    "arguments": Array [
      "%cDebugComponent%c > Re-render with changes",
      "color: green; font-weight: bold",
      "font-weight: bold",
    ],
  },
  Object {
    "__": "console.info",
    "arguments": Array [
      "%c \\"content\\" %c
%c  - %s 
%c  + %s ",
      "background: white; color: black; line-height: 18px; margin-top: 2px",
      "background: none; line-height: 18px; color: #ababab; font-size: .85em",
      "background: #ffdce0; line-height: 18px; color: black",
      "\\"foo\\"",
      "background: #cdffd8; line-height: 18px; color: black; margin-bottom: 2px",
      "\\"bar\\"",
    ],
  },
  Object {
    "__": "console.groupEnd",
    "arguments": Array [],
  },
]
`;

exports[`useDebugger redundant re-render 1`] = `
Array [
  Object {
    "__": "console.info",
    "arguments": Array [
      "%cDebugComponent%c > Initial render",
      "color: green; font-weight: bold",
      "font-weight: bold",
    ],
  },
  Object {
    "__": "console.group",
    "arguments": Array [
      "%cDebugComponent%c > Re-render with changes",
      "color: green; font-weight: bold",
      "font-weight: bold",
    ],
  },
  Object {
    "__": "console.info",
    "arguments": Array [
      "%c \\"style\\" %c but not visually changed
%c  - %s 
%c  + %s ",
      "background: white; color: black; line-height: 18px; margin-top: 2px",
      "background: none; line-height: 18px; color: #ababab; font-size: .85em",
      "background: #ffdce0; line-height: 18px; color: black",
      "{\\"width\\":\\"100%\\"}",
      "background: #cdffd8; line-height: 18px; color: black; margin-bottom: 2px",
      "{\\"width\\":\\"100%\\"}",
    ],
  },
  Object {
    "__": "console.groupEnd",
    "arguments": Array [],
  },
]
`;

exports[`useDebugger redundant re-render without change props 1`] = `
Array [
  Object {
    "__": "console.info",
    "arguments": Array [
      "%cDebugComponent%c > Initial render",
      "color: green; font-weight: bold",
      "font-weight: bold",
    ],
  },
  Object {
    "__": "console.warn",
    "arguments": Array [
      "%cDebugComponent%c > Re-render without changes",
      "color: green; font-weight: bold",
      "font-weight: bold",
    ],
  },
]
`;
